# CASPER

./: README.html  README.md  c_alpha_mass.py  casper.py  example_script.py  pyproject.toml  setup.cfg
examples/: example_script.ipynb
src/casper/: __init__.py  casper.py
