[metadata]
name = py-casper
version = 0.0.5
author = Shaun Brown
author_email = s.t.brown@2018.ljmu.ac.uk
description = A python package to predict halo concentration and shape parameter.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Shaun-T-Brown/CASPER

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src